<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="RouxSwiftHelloWorld" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC" customClass="ScandyCoreView">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="pnn-vj-fZe" userLabel="Scan Size Slider">
                                <rect key="frame" x="18" y="813" width="378" height="31"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="374" id="YbB-8M-Ggp"/>
                                </constraints>
                                <connections>
                                    <action selector="scanSizeChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="QBD-ro-p4v"/>
                                </connections>
                            </slider>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Scan Size: 1.00m" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BtO-WT-Fs9">
                                <rect key="frame" x="76" y="777" width="179.5" height="29"/>
                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                <color key="textColor" systemColor="systemPinkColor" red="1" green="0.1764705882" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZVM-CO-6oK" userLabel="V2 Mode Switch">
                                <rect key="frame" x="306" y="101" width="51" height="31"/>
                                <connections>
                                    <action selector="toggleV2:" destination="BYZ-38-t0r" eventType="valueChanged" id="WuV-qj-O35"/>
                                </connections>
                            </switch>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enable unbounded" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P8s-L8-VOI" userLabel="V2 Mode Label">
                                <rect key="frame" x="259.5" y="72" width="143.5" height="20.5"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" systemColor="systemPinkColor" red="1" green="0.1764705882" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="x4w-G1-HHO">
                                <rect key="frame" x="107" y="554" width="200" height="215"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f10-fp-syk" userLabel="Start Scan Button">
                                        <rect key="frame" x="0.0" y="0.0" width="200" height="50"/>
                                        <color key="backgroundColor" systemColor="systemGray5Color" red="0.8980392157" green="0.8980392157" blue="0.91764705879999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="50" id="tJi-g0-fJa"/>
                                            <constraint firstAttribute="width" constant="200" id="zcH-0O-Uy2"/>
                                        </constraints>
                                        <state key="normal" title="Start Scanning"/>
                                        <connections>
                                            <action selector="startScanningPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="OHc-jf-5wD"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YTi-wg-3YC" userLabel="Stop Scan Button">
                                        <rect key="frame" x="0.0" y="55" width="200" height="50"/>
                                        <color key="backgroundColor" systemColor="systemGray5Color" red="0.8980392157" green="0.8980392157" blue="0.91764705879999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="200" id="G3T-GN-S5y"/>
                                            <constraint firstAttribute="height" constant="50" id="xck-Uu-Fxk"/>
                                        </constraints>
                                        <state key="normal" title="Stop Scanning"/>
                                        <connections>
                                            <action selector="stopScanningPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="L9l-6T-WXX"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QdH-eP-lqJ">
                                        <rect key="frame" x="0.0" y="110" width="200" height="50"/>
                                        <color key="backgroundColor" red="0.85755128079999998" green="0.85755128079999998" blue="0.85755128079999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="200" id="QdC-f9-LSR"/>
                                            <constraint firstAttribute="height" constant="50" id="WUZ-Xm-2Ld"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                        <state key="normal" title="Save Mesh">
                                            <color key="titleColor" red="0.035738641109999997" green="0.85743199479999999" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                        </state>
                                        <connections>
                                            <action selector="saveMeshPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="gzi-8S-w20"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jwE-TC-rGK">
                                        <rect key="frame" x="0.0" y="165" width="200" height="50"/>
                                        <color key="backgroundColor" red="0.80677604970000005" green="0.80677604970000005" blue="0.80677604970000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="200" id="WPb-wn-plk"/>
                                            <constraint firstAttribute="height" constant="50" id="rrE-EE-xDN"/>
                                        </constraints>
                                        <state key="normal" title="Start Preview"/>
                                        <connections>
                                            <action selector="startPreviewPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="NDY-xY-fpa"/>
                                        </connections>
                                    </button>
                                </subviews>
                            </stackView>
                        </subviews>
                        <constraints>
                            <constraint firstItem="P8s-L8-VOI" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="28" id="0JG-4X-DXI"/>
                            <constraint firstItem="ZVM-CO-6oK" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="57" id="0pR-zB-fMU"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="x4w-G1-HHO" secondAttribute="bottom" constant="93" id="36m-Ns-FH4"/>
                            <constraint firstItem="x4w-G1-HHO" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="3BR-5k-3fz"/>
                            <constraint firstItem="BtO-WT-Fs9" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="76" id="7gz-mt-wTF"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="pnn-vj-fZe" secondAttribute="bottom" constant="19" id="A5z-fc-8Vf"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="P8s-L8-VOI" secondAttribute="trailing" constant="11" id="Yee-iX-I9P"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ZVM-CO-6oK" secondAttribute="trailing" constant="59" id="ZHP-AE-c9f"/>
                            <constraint firstItem="pnn-vj-fZe" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="iBB-P4-met"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="BtO-WT-Fs9" secondAttribute="bottom" constant="56" id="uVK-zc-Bx0"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <connections>
                        <outlet property="saveMeshButton" destination="QdH-eP-lqJ" id="uWt-WC-Go9"/>
                        <outlet property="scanSizeLabel" destination="BtO-WT-Fs9" id="f4Y-AV-ZgY"/>
                        <outlet property="scanSizeSlider" destination="pnn-vj-fZe" id="JZc-ac-OWm"/>
                        <outlet property="startPreviewButton" destination="jwE-TC-rGK" id="0Do-Y2-yqJ"/>
                        <outlet property="startScanButton" destination="f10-fp-syk" id="j0m-MP-tNJ"/>
                        <outlet property="stopScanButton" destination="YTi-wg-3YC" id="h4q-X9-nt1"/>
                        <outlet property="v2ModeLabel" destination="P8s-L8-VOI" id="TRd-4X-CaJ"/>
                        <outlet property="v2ModeSwitch" destination="ZVM-CO-6oK" id="MQl-FN-Aip"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="137.68115942028987" y="137.94642857142856"/>
        </scene>
    </scenes>
</document>
