...
    func onSaveMesh(_ status: ScandyCoreStatus) {
        DispatchQueue.main.async {
            if(status == self.SUCCESS){
                print("mesh saved: \(status)")
                let alertController = UIAlertController(title: "Mesh Saved", message:
                    "file saved to \(self.meshPath)", preferredStyle: .alert)
                alertController.addAction(UIAlertAction(title: "Dismiss", style: .default, handler: { _ in
                    ScandyCore.startPreview();
                }))
                self.present(alertController, animated: true, completion: nil)
            }
        }
    }
...
